fix projects scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   --foreground: #ededed;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
